--- a/i18n/el/LC_MESSAGES/ckanext-publicamundi.po
+++ b/i18n/el/LC_MESSAGES/ckanext-publicamundi.po
@@ -371,54 +371,80 @@ msgstr "Άδεια"
 
 #: ckanext/publicamundi/themes/geodata/templates/snippets/menu_list.html:13
 msgid "Utilities Communication"
-msgstr ""
+msgstr "Επιχειρήσεις Κοινής Ωφελείας Επικοινωνία"
 
 #: ckanext/publicamundi/themes/geodata/templates/snippets/menu_list.html:16
 msgid "Transportation"
-msgstr ""
+msgstr "Μεταφορές"
 
 #: ckanext/publicamundi/themes/geodata/templates/snippets/menu_list.html:19
 msgid "Structure"
-msgstr ""
+msgstr "Κατασκευές"
 
 #: ckanext/publicamundi/themes/geodata/templates/snippets/menu_list.html:22
 msgid "Society"
-msgstr ""
+msgstr "Κοινωνία"
 
 #: ckanext/publicamundi/themes/geodata/templates/snippets/menu_list.html:25
 msgid "Planning Cadastre"
-msgstr ""
+msgstr "Χωροταξία Κτηματολόγιο"
 
 #: ckanext/publicamundi/themes/geodata/templates/snippets/menu_list.html:28
 msgid "Oceans"
-msgstr ""
+msgstr "Θάλασσες"
 
 #: ckanext/publicamundi/themes/geodata/templates/snippets/menu_list.html:31
 #: ckanext/publicamundi/themes/geodata/templates/spatial/snippets/spatial_query.html:17
 msgid "Location"
-msgstr ""
+msgstr "Γεωγραφική Θέση"
 
 #: ckanext/publicamundi/themes/geodata/templates/snippets/menu_list.html:34
 msgid "Intelligence Military"
-msgstr ""
+msgstr "Στρατιωτικές Πληροφορίες"
 
 #: ckanext/publicamundi/themes/geodata/templates/snippets/menu_list.html:37
 msgid "Inland Waters"
-msgstr ""
+msgstr "Εσωτερικά Ύδατα"
 
 #: ckanext/publicamundi/themes/geodata/templates/snippets/menu_list.html:40
 msgid "Imagery Base Maps Earth Cover"
-msgstr ""
+msgstr "Ορθοεικόνες Βασικοί Χάρτες Κάλυψη Γης"
 
 #: ckanext/publicamundi/themes/geodata/templates/snippets/menu_list.html:43
 msgid "Health"
-msgstr ""
+msgstr "Υγεία"
 
 #: ckanext/publicamundi/themes/geodata/templates/snippets/menu_list.html:46
 msgid "Geoscientific Information"
-msgstr ""
+msgstr "Γεωεπιστημονικές Πληροφορίες"
 
 #: ckanext/publicamundi/themes/geodata/templates/snippets/menu_list.html:49
+msgid "Farming"
+msgstr "Γεωργία"
+
+#: ckanext/publicamundi/themes/geodata/templates/snippets/menu_list.html:52
+msgid "Environment"
+msgstr "Περιβάλλον"
+
+#: ckanext/publicamundi/themes/geodata/templates/snippets/menu_list.html:55
+msgid "Elevation"
+msgstr "Υψομετρία"
+
+#: ckanext/publicamundi/themes/geodata/templates/snippets/menu_list.html:58
+msgid "Economy"
+msgstr "Οικονομία"
+
+#: ckanext/publicamundi/themes/geodata/templates/snippets/menu_list.html:61
+msgid "Meteorology"
+msgstr "Κλιματολογία / Μετεωρολογία / Ατμόσφαιρα"
+
+#: ckanext/publicamundi/themes/geodata/templates/snippets/menu_list.html:64
+msgid "Boundaries"
+msgstr "Όρια"
+
+#: ckanext/publicamundi/themes/geodata/templates/snippets/menu_list.html:67
+msgid "Biota"
+msgstr "Βιόκοσμος"
 
 #: ckanext/publicamundi/templates/package/search.html:19
 #: ckanext/publicamundi/themes/geodata/templates/package/search.html:44
@@ -1541,7 +1567,7 @@ msgstr "Εμφάνιση Περισσοτέρων"
 
 #: ckanext/publicamundi/themes/geodata/templates/snippets/facet_list.html:74
 msgid "Show Only Popular {facet_type}"
-msgstr "Εμφάνιση Μόνο των Δημοφιλέστερων {facet_type}"
+msgstr "Εμφάνιση Μόνο των Δημοφιλέστερων"
 
 #: ckanext/publicamundi/themes/geodata/templates/snippets/facet_list.html:78
 msgid "There are no {facet_type} that match this search"
