--- a/i18n/el/LC_MESSAGES/ckanext-publicamundi.po
+++ b/i18n/el/LC_MESSAGES/ckanext-publicamundi.po
@@ -435,7 +435,7 @@ msgid "Economy"
 msgstr "Οικονομία"
 
 #: ckanext/publicamundi/themes/geodata/templates/snippets/menu_list.html:61
-msgid "Meteorology"
+msgid "Climatology Meteorology Atmosphere"
 msgstr "Μετεωρολογία Κλιματολογία Ατμόσφαιρα"
 
 #: ckanext/publicamundi/themes/geodata/templates/snippets/menu_list.html:64
@@ -1454,6 +1454,23 @@ msgstr ""
 "href=\"https://github.com/PublicaMundi\">github.com/PublicaMundi</a></li>"
 " </ul></p> </div> "
 
+#: ckanext/publicamundi/themes/geodata/templates/home/snippets/carousel.html:3
+msgid "Blue flag beaches 2010"
+msgstr "Γαλάζιες σημαίες 2010"
+
+#: ckanext/publicamundi/themes/geodata/templates/home/snippets/carousel.html:6
+#: ckanext/publicamundi/themes/geodata/templates/home/snippets/carousel.html:15
+msgid "Railway network"
+msgstr "Σιδηροδρομικό δίκτυο"
+
+#: ckanext/publicamundi/themes/geodata/templates/home/snippets/carousel.html:9
+msgid "City blocks Kalamaria"
+msgstr "Οικοδομικά τετράγωνα Καλαμαριάς"
+
+#: ckanext/publicamundi/themes/geodata/templates/home/snippets/carousel.html:12
+msgid "Urban & rural regions"
+msgstr "Αστικές & Αγροτικές περιοχές"
+
 #: ckanext/publicamundi/themes/geodata/templates/home/snippets/promoted.html:8
 msgid "Open Data"
 msgstr "Ανοιχτά Δεδομένα"
@@ -1467,6 +1484,15 @@ msgstr ""
 "Εδώ θα βρείτε δεδομένα, εργαλεία, και πόρους για τη διεξαγωγή έρευνας,"
 "για την ανάπτυξη εφαρμογών για το διαδίκτυο και για κινητές συσκευές, "
 "για σχεδιασμό οπτικοποίησης δεδομένων, και άλλα."
+
+#: ckanext/publicamundi/themes/geodata/templates/home/snippets/promoted.html:16
+#: ckanext/publicamundi/themes/geodata/templates/home/snippets/promoted_new.html:6
+msgid "Learn More"
+msgstr "Μάθετε περισσότερα"
+
+#: ckanext/publicamundi/themes/geodata/templates/home/snippets/promoted_new.html:3
+msgid "Open data, accessible to everyone!"
+msgstr "Ανοικτά δεδομένα, προσβάσιμα σε όλους!"
 
 #: ckanext/publicamundi/themes/geodata/templates/home/snippets/search.html:12
 msgid "Search"
@@ -1560,6 +1586,10 @@ msgstr "Προσθήκη δεδομένων"
 #: ckanext/publicamundi/themes/geodata/templates/package/snippets/stages.html:50
 msgid "Additional info"
 msgstr "Πρόσθετες πληροφορίες"
+
+#: ckanext/publicamundi/themes/geodata/templates/snippets/facet_list.html:64
+msgid "A...Z "
+msgstr "Α...Ω"
 
 #: ckanext/publicamundi/themes/geodata/templates/snippets/facet_list.html:72
 msgid "Show More {facet_type}"
