--- a/i18n/el/LC_MESSAGES/ckanext-publicamundi.po
+++ b/i18n/el/LC_MESSAGES/ckanext-publicamundi.po
@@ -1603,6 +1603,22 @@ msgstr "Εμφάνιση Μόνο των Δημοφιλέστερων"
 msgid "There are no {facet_type} that match this search"
 msgstr "Δεν υπάρχουν {facet_type} που να αντιστοιχούν σε αυτή την αναζήτηση"
 
+#: ckanext/publicamundi/templates/user/snippets/filter_bar.html:39
+#: ckanext/publicamundi/templates/user/snippets/filter_bar.html:82
+msgid "<span class=\"all-types\"></span>All"
+msgstr "<span class=\"all-types\"></span>Όλοι"
+
+#: ckanext/publicamundi/templates/user/snippets/filter_bar.html:55
+#: ckanext/publicamundi/templates/user/snippets/filter_bar.html:85
+msgid "Status"
+msgstr "Κατάσταση"
+
+#: ckanext/publicamundi/templates/user/snippets/filter_bar.html:61
+#: ckanext/publicamundi/templates/user/snippets/filter_bar.html:87
+msgid "<span class=\"all-statuses\"></span>All"
+msgstr "<span class=\"all-types\"></span>Όλες"
+
+
 #: ckanext/publicamundi/themes/geodata/templates/snippets/license.html:15
 msgid "This dataset satisfies the Open Definition."
 msgstr "Αυτό το σύνολο δεδομένων ικανοποιεί τον Ορισμό των Ανοιχτών Δεδομένων."
