--- a/i18n/el/LC_MESSAGES/ckanext-publicamundi.po
+++ b/i18n/el/LC_MESSAGES/ckanext-publicamundi.po
@@ -1383,6 +1383,10 @@ msgstr "Geolabs"
 msgid "GET"
 msgstr "GET"
 
+#: ckanext/publicamundi/themes/geodata/templates/footer.html:52
+msgid "Report issue"
+msgstr "Αναφορά προβλήματος"
+
 #: ckanext/publicamundi/themes/geodata/templates/header.html:82
 #: ckanext/publicamundi/themes/geodata/templates/home/index.html:18
 msgid "View profile"
@@ -1445,6 +1449,11 @@ msgstr "Αναζήτηση ομάδων..."
 msgid "Groups"
 msgstr "Ομάδες"
 
+#: ckanext/publicamundi/themes/geodata/templates/group/index.html:23
+#: ckanext/publicamundi/themes/geodata/templates/user/dashboard_groups.html:5
+msgid "Add Topic"
+msgstr "Προσθήκη θεματικής"
+
 #: ckanext/publicamundi/themes/geodata/templates/group/index.html:22
 msgid "There are currently no groups for this site"
 msgstr "Δεν υπάρχουν ομάδες για αυτή την ιστοσελίδα"
@@ -1453,6 +1462,16 @@ msgstr "Δεν υπάρχουν ομάδες για αυτή την ιστοσε
 #: ckanext/publicamundi/themes/geodata/templates/organization/index.html:22
 msgid "How about creating one?"
 msgstr "Θα θέλατε να δημιουργήσετε έναν/μία;"
+
+#: ckanext/publicamundi/themes/geodata/templates/group/snippets/helper.html:4
+msgid "What are Topics?"
+msgstr "Τι είναι οι Θεματικές;"
+
+#: ckanext/publicamundi/themes/geodata/templates/group/snippets/helper.html:8
+msgid ""
+" Topics are collections of data sets for a particular theme, offering a "
+"simple way to discover and use published data sets. "
+msgstr "Οι θεματικές περιοχές είναι συλλογές δεδομένων για ένα συγκεκριμένο θέμα και προσφέρουν έναν εύκολο τρόπο για να ανακαλύψετε και να χρησιμοποιήσετε δημοσιευμένα δεδομένα"
 
 #: ckanext/publicamundi/themes/geodata/templates/home/layout1.html:1
 msgid "Latest Updated"
@@ -1554,6 +1573,17 @@ msgstr "Αναζήτηση οργανισμών..."
 msgid "There are currently no organizations for this site"
 msgstr "Δεν υπάρχουν οργανισμοί για αυτή την ιστοσελίδα"
 
+#: ckanext/publicamundi/themes/geodata/templates/organization/snippets/helper.html:4
+msgid "What are Organizations?"
+msgstr "Τι είναι οι Οργανισμοί;"
+
+#: ckanext/publicamundi/themes/geodata/templates/organization/snippets/helper.html:8
+msgid ""
+" Datasets are published on geodata.gov.gr by a range of organisations, mainly"
+" from the Greek public sector. On this page you can view all organizations, "
+"search for them by name, and visit their published datasets "
+msgstr "Τα σύνολα δεδομένων δημοσιεύονται στο geodata.gov.gr από ένα σύνολο οργανισμών, κυρίως του Ελληνικού δημόσιου τομέα. Σε αυτή τη σελίδα μπορείτε να δείτε όλους τους οργανισμούς, να αναζητήσετε οργανισμούς που σας ενδιαφέρουν και να επισκεφτείτε τα δεδομένα που έχουν δημοσιεύσει"
+
 #: ckanext/publicamundi/themes/geodata/templates/package/read.html:16
 msgid "Publication:"
 msgstr "Δημοσίευση:"
@@ -1628,6 +1658,47 @@ msgstr "Δημιουργία δεδομένων"
 #: ckanext/publicamundi/themes/geodata/templates/package/snippets/stages.html:38
 msgid "Add data"
 msgstr "Προσθήκη δεδομένων"
+
+#: ckanext/publicamundi/themes/geodata/templates/snippets/contact.html:3
+#: ckanext/publicamundi/themes/geodata/templates/snippets/contact_form.html:4
+msgid "<span class='contact-term'>Contact</span>"
+msgstr "Επικοινωνία"
+
+#: ckanext/publicamundi/themes/geodata/templates/snippets/contact_form.html:9
+msgid "Sending..."
+msgstr "Αποστέλεται..."
+
+#: ckanext/publicamundi/themes/geodata/templates/snippets/contact_form.html:12
+msgid "Email sent successfully. Thank you!"
+msgstr "Το μήνυμά σας στάλθηκε επιτυχώς. Ευχαριστούμε!"
+
+#: ckanext/publicamundi/themes/geodata/templates/snippets/contact_form.html:15
+msgid "Unfortunately your email has not been sent. You can directly contact info@geodata.gov.gr"
+msgstr "Δυστυχώς η αποστολή του μηνύματός σας απέτυχε. Μπορείτε να επικοινωνήσετε απ'ευθείας με το info@geodata.gov.gr. "
+
+#: ckanext/publicamundi/themes/geodata/templates/snippets/contact_form.html:19
+msgid "Your name"
+msgstr "Το όνομά σας"
+
+#: ckanext/publicamundi/themes/geodata/templates/snippets/contact_form.html:27
+msgid "Your email"
+msgstr "Το email σας"
+
+#: ckanext/publicamundi/themes/geodata/templates/snippets/contact_form.html:43
+msgid "Your message"
+msgstr "Το μήνυμά σας"
+
+#: ckanext/publicamundi/themes/geodata/templates/snippets/contact_form.html:56
+msgid "Captcha"
+msgstr ""
+
+#: ckanext/publicamundi/themes/geodata/templates/snippets/contact_form.html:69
+msgid "Send"
+msgstr "Αποστολή"
+
+#: ckanext/publicamundi/themes/geodata/templates/snippets/contact_form.html:70
+msgid "Done"
+msgstr "Τέλος"
 
 #: ckanext/publicamundi/themes/geodata/templates/package/snippets/stages.html:44
 #: ckanext/publicamundi/themes/geodata/templates/package/snippets/stages.html:48
@@ -1771,6 +1842,10 @@ msgstr "Δεν βρέθηκαν οργανισμοί"
 #: ckanext/publicamundi/themes/geodata/templates/snippets/social.html:3
 msgid "Share"
 msgstr "Μοιραστείτε"
+
+#: ckanext/publicamundi/themes/geodata/templates/user/dashboard.html:24
+msgid "My Topics"
+msgstr "Οι θεματικές μου"
 
 #: ckanext/publicamundi/themes/geodata/templates/spatial/snippets/spatial_query.html:18
 msgid "Clear"
