--- a/i18n/el/LC_MESSAGES/ckanext-publicamundi.po
+++ b/i18n/el/LC_MESSAGES/ckanext-publicamundi.po
@@ -1323,6 +1323,26 @@ msgstr "Αποτυχία Αναγνώρισης"
 msgid "Ingest Resource"
 msgstr "Φόρτωση Πόρου"
 
+#: ckanext/publicamundi/themes/geodata/controllers/contact.py:43
+msgid "Name: "
+msgstr "Όνομα: "
+
+#: ckanext/publicamundi/themes/geodata/controllers/contact.py:46
+msgid "Email: "
+msgstr ""
+
+#: ckanext/publicamundi/themes/geodata/controllers/contact.py:47
+msgid "Message: "
+msgstr "Μήνυμα: "
+
+#: ckanext/publicamundi/themes/geodata/controllers/contact.py:58
+msgid "Regarding: {0}"
+msgstr "Σχετικά με: {0}"
+
+#: ckanext/publicamundi/themes/geodata/controllers/contact.py:64
+msgid "Sir/Madam"
+msgstr "Κύριε/Κυρία"
+
 #: ckanext/publicamundi/themes/geodata/templates/footer.html:12
 #: ckanext/publicamundi/themes/geodata/templates/home/snippets/search.html:3
 msgid "Search Datasets"
@@ -1673,8 +1693,25 @@ msgid "Email sent successfully. Thank you!"
 msgstr "Το μήνυμά σας στάλθηκε επιτυχώς. Ευχαριστούμε!"
 
 #: ckanext/publicamundi/themes/geodata/templates/snippets/contact_form.html:15
-msgid "Unfortunately your email has not been sent. You can directly contact info@geodata.gov.gr"
-msgstr "Δυστυχώς η αποστολή του μηνύματός σας απέτυχε. Μπορείτε να επικοινωνήσετε απ'ευθείας με το info@geodata.gov.gr. "
+msgid ""
+"Unfortunately your email has not been sent due to technical problems. You can"
+" directly contact info@geodata.gov.gr"
+msgstr "Δυστυχώς η αποστολή του μηνύματός σας απέτυχε λόγω τεχνικού προβλήματος. Μπορείτε να επικοινωνήσετε απ'ευθείας με το info@geodata.gov.gr. "
+
+#: ckanext/publicamundi/themes/geodata/templates/snippets/contact_form.html:23
+#: ckanext/publicamundi/themes/geodata/templates/snippets/contact_form.html:31
+#: ckanext/publicamundi/themes/geodata/templates/snippets/contact_form.html:47
+#: ckanext/publicamundi/themes/geodata/templates/snippets/contact_form.html:61
+msgid "Please fill out this field"
+msgstr "Παρακαλώ συμπληρώστε αυτό το πεδίο"
+
+#: ckanext/publicamundi/themes/geodata/templates/snippets/contact_form.html:31
+msgid "Please enter a correct email address"
+msgstr "Παρακαλώ συμπληρώστε μια σωστή διεύθυνση ηλεκτρονικής αλληλογραφίας"
+
+#: ckanext/publicamundi/themes/geodata/templates/snippets/contact_form.html:57
+msgid "Verification"
+msgstr "Επαλήθευση"
 
 #: ckanext/publicamundi/themes/geodata/templates/snippets/contact_form.html:19
 msgid "Your name"
@@ -1692,6 +1729,10 @@ msgstr "Το μήνυμά σας"
 msgid "Captcha"
 msgstr ""
 
+#: ckanext/publicamundi/themes/geodata/templates/snippets/contact_form.html:64
+msgid "The typed value does not match the image. Please try again"
+msgstr "Η τιμή του πεδίου δεν ταιριάζει με την εικόνα. Παρακαλώ ξαναπροσπαθήστε"
+
 #: ckanext/publicamundi/themes/geodata/templates/snippets/contact_form.html:69
 msgid "Send"
 msgstr "Αποστολή"
@@ -1699,6 +1740,10 @@ msgstr "Αποστολή"
 #: ckanext/publicamundi/themes/geodata/templates/snippets/contact_form.html:70
 msgid "Done"
 msgstr "Τέλος"
+
+#: ckanext/publicamundi/themes/geodata/templates/snippets/contact_form.html:72
+msgid "Reset"
+msgstr "Επαναφορά"
 
 #: ckanext/publicamundi/themes/geodata/templates/package/snippets/stages.html:44
 #: ckanext/publicamundi/themes/geodata/templates/package/snippets/stages.html:48
