--- a/i18n/el/LC_MESSAGES/ckanext-publicamundi.po
+++ b/i18n/el/LC_MESSAGES/ckanext-publicamundi.po
@@ -1604,6 +1604,14 @@ msgid ""
 "search for them by name, and visit their published datasets "
 msgstr "Τα σύνολα δεδομένων δημοσιεύονται στο geodata.gov.gr από ένα σύνολο οργανισμών, κυρίως του Ελληνικού δημόσιου τομέα. Σε αυτή τη σελίδα μπορείτε να δείτε όλους τους οργανισμούς, να αναζητήσετε οργανισμούς που σας ενδιαφέρουν και να επισκεφτείτε τα δεδομένα που έχουν δημοσιεύσει"
 
+#: ckanext/publicamundi/themes/geodata/templates/package/developers.html:22
+#, python-format
+msgid ""
+"For more information on accessing the APIs please refer to the <a "
+"href=\"%(apps_link)s\">applications</a> section"
+msgstr ""
+"Για περισσότερες πληροφορίες σχετικά με τα APIs παρακαλώ ανατρέξτε στην ενότητα <a href=\"%(apps_link)s\">εφαρμογές</a>"
+
 #: ckanext/publicamundi/themes/geodata/templates/package/read.html:16
 msgid "Publication:"
 msgstr "Δημοσίευση:"
@@ -1750,6 +1758,55 @@ msgstr "Επαναφορά"
 #: ckanext/publicamundi/themes/geodata/templates/package/snippets/stages.html:50
 msgid "Additional info"
 msgstr "Πρόσθετες πληροφορίες"
+
+#: ckanext/publicamundi/themes/geodata/templates/package/snippets/developers/csw_api.html:7
+msgid "Get CSW Record"
+msgstr ""
+
+#: ckanext/publicamundi/themes/geodata/templates/package/snippets/developers/data_api.html:16
+msgid "Query example (first 5 results)"
+msgstr "Παράδειγμα ερωτήματος (τα πρώτα 5 αποτελέσματα)"
+
+#: ckanext/publicamundi/themes/geodata/templates/package/snippets/developers/data_api.html:21
+msgid "Query example (results containing 'public')"
+msgstr "Παράδειγμα ερωτήματος (αποτελέσματα που περιέχουν 'public')"
+
+#: ckanext/publicamundi/themes/geodata/templates/package/snippets/developers/data_api.html:27
+msgid "Query example (via SQL statement)"
+msgstr "Παράδειγμα ερωτήματος (μέσω ερωτήματος SQL)"
+
+#: ckanext/publicamundi/themes/geodata/templates/package/snippets/developers/data_api.html:32
+msgid "Query example in javascript (using the PublicaMundi API)"
+msgstr "Παράδειγμα ερωτήματος σε javascript (μέσω του PublicaMundi API)"
+
+#: ckanext/publicamundi/themes/geodata/templates/package/snippets/developers/data_api.html:35
+msgid "Dataset contains no datastore resources"
+msgstr "Το συγκεκριμένο σύνολο δεδομένων δεν περιέχει κατάλληλους πόρους για χρήση με το API δεδομένων"
+
+#: ckanext/publicamundi/themes/geodata/templates/package/snippets/developers/data_api.html:37
+msgid ""
+"'You can find detailed Data API demos <a href=\"/maps/demo/data-"
+"api.html\" target=\"_blank\">here</a>"
+msgstr "Μπορείτε να βρείτε λεπτομερή παραδείγματα σχετικά με το API δεδομένων <a href=\"/maps/demo/data-api.html\" target=\"_blank\">εδώ</a>"
+
+#: ckanext/publicamundi/themes/geodata/templates/package/snippets/developers/mapping_api.html:24
+msgid "The dataset contains no suitable data to use with the Mapping API"
+msgstr "Το συγκεκριμένο σύνολο δεδομένων δεν περιέχει κατάλληλους πόρους για χρήση με το χαρτογραφικό API"
+
+#: ckanext/publicamundi/themes/geodata/templates/package/snippets/developers/mapping_api.html:26
+msgid ""
+"You can find detailed Mapping API demos <a href=\"/mapping-"
+"api\" target=\"_blank\">here</a>"
+msgstr ""
+"Μπορείτε να βρείτε λεπτομερή παραδείγματα σχετικά με το χαρτογραφικό API <a href=\"/mapping-api\" target=\"_blank\">εδώ</a>"
+
+#: ckanext/publicamundi/themes/geodata/templates/package/snippets/developers/metadata_api.html:5
+msgid "Metadata API"
+msgstr "API μεταδεδομένων"
+
+#: ckanext/publicamundi/themes/geodata/templates/package/snippets/developers/metadata_api.html:10
+msgid "Package show (dataset metadata)"
+msgstr ""
 
 #: ckanext/publicamundi/themes/geodata/templates/snippets/facet_list.html:64
 msgid "A...Z "
