--- a/i18n/el/LC_MESSAGES/ckanext-publicamundi.po
+++ b/i18n/el/LC_MESSAGES/ckanext-publicamundi.po
@@ -762,6 +762,7 @@ msgid "URL"
 msgstr "URL"
 
 #: ckanext/publicamundi/templates/package/snippets/resource_form.html:33
+#: ckanext/publicamundi/themes/geodata/templates/snippets/contact_message.txt:1
 msgid "Name"
 msgstr "Όνομα"
 
@@ -1659,6 +1660,10 @@ msgstr "Ποτέ"
 msgid "Last revision:"
 msgstr "Τελευταία αναθεώρηση"
 
+#: ckanext/publicamundi/themes/geodata/templates/snippets/contact_message.txt:7
+msgid "Dataset"
+msgstr "Σύνολο δεδομένων"
+
 #: ckanext/publicamundi/themes/geodata/templates/package/search.html:16
 msgid "Mapping API"
 msgstr "Χαρτογραφικό API"
@@ -1720,6 +1725,7 @@ msgstr "Δημιουργία δεδομένων"
 #: ckanext/publicamundi/themes/geodata/templates/package/snippets/stages.html:38
 msgid "Add data"
 msgstr "Προσθήκη δεδομένων"
+
 
 #: ckanext/publicamundi/themes/geodata/templates/snippets/contact.html:3
 #: ckanext/publicamundi/themes/geodata/templates/snippets/contact_form.html:4
@@ -1786,6 +1792,10 @@ msgstr "Τέλος"
 #: ckanext/publicamundi/themes/geodata/templates/snippets/contact_form.html:72
 msgid "Reset"
 msgstr "Επαναφορά"
+
+#: ckanext/publicamundi/themes/geodata/templates/snippets/contact_message.txt:5
+msgid "Subject"
+msgstr "Θέμα"
 
 #: ckanext/publicamundi/themes/geodata/templates/package/snippets/stages.html:44
 #: ckanext/publicamundi/themes/geodata/templates/package/snippets/stages.html:48
